--- a/trail.ipynb
+++ b/trail.ipynb
@@ -2,21 +2,212 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
-     "ename": "",
-     "evalue": "",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31mThe kernel failed to start due to the missing module 'packaging'. Consider installing this module.\n",
-      "\u001b[1;31mClick <a href='https://aka.ms/kernelFailuresMissingModule'>here</a> for more info."
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "ok\n"
      ]
     }
    ],
    "source": [
     "print(\"ok\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 51,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from langchain import PromptTemplate\n",
+    "from langchain.chains import RetrievalQA\n",
+    "from langchain.embeddings import HuggingFaceEmbeddings\n",
+    "from langchain.vectorstores import Pinecone as PineconeStore\n",
+    "import pinecone\n",
+    "from langchain.document_loaders import PyPDFLoader, DirectoryLoader\n",
+    "from langchain.text_splitter import RecursiveCharacterTextSplitter\n",
+    "from langchain.prompts import PromptTemplate\n",
+    "from langchain.llms import CTransformers\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 52,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "PINECONE_API_KEY = \"dc8acf0a-9af9-44a4-b3b2-a1a6d7caf258\"\n",
+    "PINECONE_API_ENV = \"us-east-1\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 53,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Extract data from the PDF\n",
+    "def load_pdf(data):\n",
+    "    loader = DirectoryLoader(data,\n",
+    "                    glob=\"*.pdf\",\n",
+    "                    loader_cls=PyPDFLoader)\n",
+    "    \n",
+    "    documents = loader.load()\n",
+    "\n",
+    "    return documents"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 54,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "extracted_data = load_pdf(\"data/\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 55,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#extracted_data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 56,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Create text chunks\n",
+    "def text_split(extracted_data):\n",
+    "    text_splitter = RecursiveCharacterTextSplitter(chunk_size = 500, chunk_overlap = 20)\n",
+    "    text_chunks = text_splitter.split_documents(extracted_data)\n",
+    "\n",
+    "    return text_chunks"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 57,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "length of my chunk: 7020\n"
+     ]
+    }
+   ],
+   "source": [
+    "text_chunks = text_split(extracted_data)\n",
+    "print(\"length of my chunk:\", len(text_chunks))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 58,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#text_chunks"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 59,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#download embedding model\n",
+    "def download_hugging_face_embeddings():\n",
+    "    embeddings = HuggingFaceEmbeddings(model_name=\"sentence-transformers/all-MiniLM-L6-v2\")\n",
+    "    return embeddings"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 60,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "c:\\Users\\Anas\\anaconda3\\Lib\\site-packages\\transformers\\tokenization_utils_base.py:1601: FutureWarning: `clean_up_tokenization_spaces` was not set. It will be set to `True` by default. This behavior will be depracted in transformers v4.45, and will be then set to `False` by default. For more details check this issue: https://github.com/huggingface/transformers/issues/31884\n",
+      "  warnings.warn(\n"
+     ]
+    }
+   ],
+   "source": [
+    "embeddings = download_hugging_face_embeddings()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 61,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "HuggingFaceEmbeddings(client=SentenceTransformer(\n",
+       "  (0): Transformer({'max_seq_length': 256, 'do_lower_case': False}) with Transformer model: BertModel \n",
+       "  (1): Pooling({'word_embedding_dimension': 384, 'pooling_mode_cls_token': False, 'pooling_mode_mean_tokens': True, 'pooling_mode_max_tokens': False, 'pooling_mode_mean_sqrt_len_tokens': False})\n",
+       "  (2): Normalize()\n",
+       "), model_name='sentence-transformers/all-MiniLM-L6-v2', cache_folder=None, model_kwargs={}, encode_kwargs={})"
+      ]
+     },
+     "execution_count": 61,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "embeddings"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 96,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "PINECONE_API_KEY = \"eac98585-8fa0-46d2-84d4-6d0d2a6e74b4\"\n",
+    "PINECONE_API_ENV = \"us-east-1\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 98,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pinecone\n",
+    "\n",
+    "# Initialize Pinecone with your API key and environment\n",
+    "PINECONE_API_KEY = \"eac98585-8fa0-46d2-84d4-6d0d2a6e74b4\"\n",
+    "PINECONE_API_ENV = \"us-east-1\"\n",
+    "pinecone.init(api_key=PINECONE_API_KEY, environment=PINECONE_API_ENV)\n",
+    "\n",
+    "# Connect to the index\n",
+    "index_name = pinecone.Index(\"medicalbot\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 102,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "texts = [t.page_content for t in text_chunks]\n"
    ]
   },
   {
@@ -29,13 +220,21 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "mchatbot",
+   "display_name": "base",
    "language": "python",
    "name": "python3"
   },
   "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
    "name": "python",
-   "version": "3.12.7"
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.12.4"
   }
  },
  "nbformat": 4,
