ipynb file updated

--- a/trail.ipynb
+++ b/trail.ipynb
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -31,22 +31,23 @@
     "from langchain.document_loaders import PyPDFLoader, DirectoryLoader\n",
     "from langchain.text_splitter import RecursiveCharacterTextSplitter\n",
     "from langchain.prompts import PromptTemplate\n",
-    "from langchain.llms import CTransformers\n"
+    "from langchain.llms import CTransformers\n",
+    "from pydantic import BaseModel\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
-    "PINECONE_API_KEY = \"dc8acf0a-9af9-44a4-b3b2-a1a6d7caf258\"\n",
-    "PINECONE_API_ENV = \"us-east-1\""
+    "PINECONE_API_KEY = \"789d44cf-f292-465e-aa3b-626c71c69352\"\n",
+    "PINECONE_API_ENV = \"us-east-1\"\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -63,7 +64,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -72,7 +73,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -81,7 +82,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -95,7 +96,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -113,7 +114,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -122,7 +123,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -134,13 +135,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
+      "C:\\Users\\Anas\\AppData\\Local\\Temp\\ipykernel_11632\\1337643473.py:3: LangChainDeprecationWarning: The class `HuggingFaceEmbeddings` was deprecated in LangChain 0.2.2 and will be removed in 1.0. An updated version of the class exists in the :class:`~langchain-huggingface package and should be used instead. To use it run `pip install -U :class:`~langchain-huggingface` and import as `from :class:`~langchain_huggingface import HuggingFaceEmbeddings``.\n",
+      "  embeddings = HuggingFaceEmbeddings(model_name=\"sentence-transformers/all-MiniLM-L6-v2\")\n",
       "c:\\Users\\Anas\\anaconda3\\Lib\\site-packages\\transformers\\tokenization_utils_base.py:1601: FutureWarning: `clean_up_tokenization_spaces` was not set. It will be set to `True` by default. This behavior will be depracted in transformers v4.45, and will be then set to `False` by default. For more details check this issue: https://github.com/huggingface/transformers/issues/31884\n",
       "  warnings.warn(\n"
      ]
@@ -152,7 +155,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -162,10 +165,10 @@
        "  (0): Transformer({'max_seq_length': 256, 'do_lower_case': False}) with Transformer model: BertModel \n",
        "  (1): Pooling({'word_embedding_dimension': 384, 'pooling_mode_cls_token': False, 'pooling_mode_mean_tokens': True, 'pooling_mode_max_tokens': False, 'pooling_mode_mean_sqrt_len_tokens': False})\n",
        "  (2): Normalize()\n",
-       "), model_name='sentence-transformers/all-MiniLM-L6-v2', cache_folder=None, model_kwargs={}, encode_kwargs={})"
+       "), model_name='sentence-transformers/all-MiniLM-L6-v2', cache_folder=None, model_kwargs={}, encode_kwargs={}, multi_process=False, show_progress=False)"
       ]
      },
-     "execution_count": 61,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -176,38 +179,180 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 96,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
-    "PINECONE_API_KEY = \"eac98585-8fa0-46d2-84d4-6d0d2a6e74b4\"\n",
-    "PINECONE_API_ENV = \"us-east-1\""
+    "from pinecone import ServerlessSpec\n",
+    "import os\n",
+    "from pinecone.grpc import PineconeGRPC as Pinecone\n",
+    "\n",
+    "pc = Pinecone(api_key=PINECONE_API_KEY)\n",
+    "\n",
+    "index_name = \"medical\"\n",
+    "\n",
+    "\n",
+    "pc.create_index(\n",
+    "    name=index_name,\n",
+    "    dimension=384, \n",
+    "    metric=\"cosine\", \n",
+    "    spec=ServerlessSpec(\n",
+    "        cloud=\"aws\", \n",
+    "        region=\"us-east-1\"\n",
+    "    ) \n",
+    ") "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 98,
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "import os\n",
+    "os.environ[\"PINECONE_API_KEY\"] = PINECONE_API_KEY"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Embed each chunk and upsert the embeddings into your Pinecone index.\n",
+    "from langchain_pinecone import PineconeVectorStore\n",
+    "\n",
+    "docsearch = PineconeVectorStore.from_documents(\n",
+    "    documents=text_chunks,\n",
+    "    index_name=index_name,\n",
+    "    embedding=embeddings, \n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
     "import pinecone\n",
-    "\n",
-    "# Initialize Pinecone with your API key and environment\n",
-    "PINECONE_API_KEY = \"eac98585-8fa0-46d2-84d4-6d0d2a6e74b4\"\n",
-    "PINECONE_API_ENV = \"us-east-1\"\n",
-    "pinecone.init(api_key=PINECONE_API_KEY, environment=PINECONE_API_ENV)\n",
-    "\n",
-    "# Connect to the index\n",
-    "index_name = pinecone.Index(\"medicalbot\")\n"
+    "from langchain.vectorstores import Pinecone\n",
+    "from langchain.embeddings.openai import OpenAIEmbeddings"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 102,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
-    "texts = [t.page_content for t in text_chunks]\n"
+    "#If we already have an index we can load it like this\n",
+    "docsearch=Pinecone.from_existing_index(index_name, embeddings)\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Result [Document(metadata={'page': 130.0, 'source': 'data\\\\Medical_book.pdf'}, page_content=\"GALE ENCYCLOPEDIA OF MEDICINE 2 117Allergies\\nAllergic rhinitis is commonly triggered by\\nexposure to household dust, animal fur,or pollen. The foreign substance thattriggers an allergic reaction is calledan allergen.\\nThe presence of an allergen causes the\\nbody's lymphocytes to begin producingIgE antibodies. The lymphocytes of an allergy sufferer produce an unusuallylarge amount of IgE.\\nIgE molecules attach to mast\\ncells, which contain histamine.HistaminePollen grains\\nLymphocyte\\nFIRST EXPOSURE\"), Document(metadata={'page': 129.0, 'source': 'data\\\\Medical_book.pdf'}, page_content='allergens are the following:\\n• plant pollens\\n• animal fur and dander\\n• body parts from house mites (microscopic creatures\\nfound in all houses)\\n• house dust• mold spores• cigarette smoke• solvents• cleaners\\nCommon food allergens include the following:\\n• nuts, especially peanuts, walnuts, and brazil nuts\\n• fish, mollusks, and shellfish• eggs• wheat• milk• food additives and preservatives\\nThe following types of drugs commonly cause aller-\\ngic reactions:\\n• penicillin or other antibiotics'), Document(metadata={'page': 124.0, 'source': 'data\\\\Medical_book.pdf'}, page_content='itchy, scratchy nose, eyes, and throat common in aller-gic rhinitis.\\nThe number of possible airborne allergens is enor-')]\n"
+     ]
+    }
+   ],
+   "source": [
+    "query = \"What are Allergies\"\n",
+    "\n",
+    "docs=docsearch.similarity_search(query, k=3)\n",
+    "\n",
+    "print(\"Result\", docs)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "prompt_template=\"\"\"\n",
+    "Use the following pieces of information to answer the user's question.\n",
+    "If you don't know the answer, just say that you don't know, don't try to make up an answer.\n",
+    "\n",
+    "Context: {context}\n",
+    "Question: {question}\n",
+    "\n",
+    "Only return the helpful answer below and nothing else.\n",
+    "Helpful answer:\n",
+    "\"\"\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "PROMPT=PromptTemplate(template=prompt_template, input_variables=[\"context\", \"question\"])\n",
+    "chain_type_kwargs={\"prompt\": PROMPT}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "llm=CTransformers(model=\"model/llama-2-7b-chat.ggmlv3.q4_0.bin\",\n",
+    "                  model_type=\"llama\",\n",
+    "                  config={'max_new_tokens':512,\n",
+    "                          'temperature':0.8})"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "qa=RetrievalQA.from_chain_type(\n",
+    "    llm=llm, \n",
+    "    chain_type=\"stuff\", \n",
+    "    retriever=docsearch.as_retriever(search_kwargs={'k': 2}),\n",
+    "    return_source_documents=True, \n",
+    "    chain_type_kwargs=chain_type_kwargs)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\Anas\\AppData\\Local\\Temp\\ipykernel_11632\\4216317267.py:3: LangChainDeprecationWarning: The method `Chain.__call__` was deprecated in langchain 0.1.0 and will be removed in 1.0. Use :meth:`~invoke` instead.\n",
+      "  result=qa({\"query\": user_input})\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Response :  Acne is a common skin disease characterized by pimples on the face, chest, and back. It occurs when the pores of the skin become clogged with oil, dead skin cells, and bacteria.\n"
+     ]
+    }
+   ],
+   "source": [
+    "while True:\n",
+    "    user_input=input(f\"Input Prompt:\")\n",
+    "    result=qa({\"query\": user_input})\n",
+    "    print(\"Response : \", result[\"result\"])"
    ]
   },
   {
